dleted duplicates changed button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="bio"> I'm a Computer Science student and an artist. In my free time I like to rant about my undying love for Krita.
             </p>
           <div class="buttonBox">
-            <a class="myButton" href="#projects">Go</a>
+            <a class="myButton" href="#projects">Projects</a>
           </div>
         </div>
       </header>
