Updated content, added icon drafts

--- a/index.html
+++ b/index.html
@@ -27,15 +27,27 @@
       </header>
 
       <main id="projects">
-        <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>CHOCOLATE MOUSSE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
+        <div class="project" id="blogPost">
+          <img class= "projectImage" src="https://miro.medium.com/max/1400/1*HFkCD5JCdfBZ1wfpJe3pJQ.jpeg" />
+          <h2>The Top 3 FREE Digital Art Programs in 2022</h2>
+          <img src="./images/icons/article.svg" class="icon" />
+          <p class="mins">Blog Post</p>
           <p class="description">
-            This delicious chocolate mousse will delight dinner guests of all ages!</p>
+            I review some of the most commonly used free 2D digital art programs by drawing something in each one.
+            <a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559">[Read more]</a>
+          </p>
         </div>
-        <div class="recipe b">
+        <div class="project" id="frithInventory">
+          <img class= "projectImage" src="https://enge.vt.edu/content/enge_vt_edu/en/undergraduate/frith/jcr:content/content/vtcontainer_copy_cop_1381182388/vtcontainer-content/adaptiveimage.transform/xl-medium/image.jpg" />
+          <h2>Workshop Inventory System</h2>
+          <img src="./images/icons/computing.svg" class="icon" />
+          <p class="mins">Coding Project</p>
+          <p class="description">
+            Collaborated with a team of other students to develop an inventory management 
+            system from scratch for Virginia Tech's first year engineering lab.
+          </p>
+        </div>
+        <!-- <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
           <h2>SMOKED LAMB WITH RICE</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
@@ -91,11 +103,12 @@
           <p class="mins">10 mins</p>
           <p class="description">
             This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
+        </div> -->
       </main>
 
       <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
+        Allison Deaton | B.S. Computer Science 2024 | Virginia Tech
+        <!-- <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo"> -->
       </footer>
 
     </div>
