--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Allison Deaton</title>
-    <!-- <link rel="stylesheet" type="text/css" href="reset.css" /> -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
@@ -29,12 +28,12 @@
       <main id="projects">
         <div class="project" id="blogPost">
           <img class= "projectImage" src="https://miro.medium.com/max/1400/1*HFkCD5JCdfBZ1wfpJe3pJQ.jpeg" />
-          <h2>The Top 3 FREE Digital Art Programs in 2022</h2>
+          <h2><a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559">The Top 3 FREE Digital Art Programs in 2022</a></h2>
           <img src="./images/icons/article.svg" class="icon" />
           <p class="mins">Blog Post</p>
           <p class="description">
-            I review some of the most commonly used free 2D digital art programs by drawing something in each one.
-            <a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559">[Read more]</a>
+            I <a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559">review</a> some of the most commonly used free 2D digital art programs by drawing something in each one.
+            
           </p>
         </div>
         <div class="project" id="frithInventory">
@@ -47,68 +46,28 @@
             system from scratch for Virginia Tech's first year engineering lab.
           </p>
         </div>
-        <!-- <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
+        <div class="project" id="podcast">
+          <img class= "projectImage" src="https://preview.redd.it/quc44y0ry4i71.jpg?auto=webp&s=bbe92aa8f3ef5eab8823d611a4c791ef5021d9e8" />
+          <h2>You Are Not Immune to Propaganda</h2>
+          <img src="./images/icons/computing.svg" class="icon" />
+          <p class="mins">Podcast: Under Construction</p>
           <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
+            Listen to some of my fellow students and I talk about the sensation of corporate social media!
           </p>
         </div>
-        <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">25 mins</p>
+        <div class="project" id="video">
+          <img class= "projectImage" src="https://docs.krita.org/en/_static/sidebar-logo.png" />
+          <h2>Using Krita's Reference Tool</h2>
+          <img src="./images/icons/computing.svg" class="icon" />
+          <p class="mins">Video: Under Construction</p>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+            This short tutorial introduces you to Krita's <a href="https://docs.krita.org/en/reference_manual/tools/reference_images_tool.html">Reference Images Tool</a>, which allows the user to 'pin' images around their artwork for reference.
+          </p>
         </div>
-        <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>CHICKEN SANDWICH</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">45 mins</p>
-          <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div> -->
       </main>
 
       <footer>
         Allison Deaton | B.S. Computer Science 2024 | Virginia Tech
-        <!-- <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo"> -->
       </footer>
 
     </div>
