added visualizer, longle

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <header>
         <div class="wrapper">
           <h1>Allison Deaton</h1>
-            <p class="bio"> I'm a Computer Science student and an artist. In my free time I like to rant about my undying love for Krita.
+            <p class="bio"> I'm a Computer Science student and an artist. 
+              In my free time I like to expatiate about my undying love for Krita.
             </p>
           <div class="buttonBox">
             <a class="myButton" href="#projects">Projects</a>
@@ -30,7 +31,7 @@
         <div class="project" id="blogPost">
           <img class= "projectImage" src="https://miro.medium.com/max/1400/1*HFkCD5JCdfBZ1wfpJe3pJQ.jpeg" />
           <h2>The Top 3 FREE Digital Art Programs in 2022</h2>
-          <img src="./images/icons/article.svg" class="icon" />
+          <img src="images/icons/article.svg" class="icon" />
           <p class="mins">Blog Post</p>
           <p class="description">
             I review some of the most commonly used free 2D digital art programs by drawing something in each one.
@@ -40,11 +41,21 @@
         <div class="project" id="frithInventory">
           <img class= "projectImage" src="https://enge.vt.edu/content/enge_vt_edu/en/undergraduate/frith/jcr:content/content/vtcontainer_copy_cop_1381182388/vtcontainer-content/adaptiveimage.transform/xl-medium/image.jpg" />
           <h2>Workshop Inventory System</h2>
-          <img src="./images/icons/computing.svg" class="icon" />
+          <img src="images/icons/computing.svg" class="icon" />
           <p class="mins">Coding Project</p>
           <p class="description">
             Collaborated with a team of other students to develop an inventory management 
             system from scratch for Virginia Tech's first year engineering lab.
+          </p>
+        </div>
+        <div class="project" id="covidVisualizer">
+          <img class= "projectImage" src="images/project-images/covid-19-visualizer-screenshot.png" />
+          <h2>COVID-19 Data Visualization</h2>
+          <img src="images/icons/computing.svg" class="icon" />
+          <p class="mins">Coding Project</p>
+          <p class="description">
+            Collaborated with a team of other students to develop a system to visualize data 
+            (casualties and deaths) from COVID-19 in some states from the Southeast.
           </p>
         </div>
         <!-- <div class="recipe b">
