--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           </p>
         </div>
         <div class="project" id="podcast">
-          <img class= "projectImage" src="https://preview.redd.it/quc44y0ry4i71.jpg?auto=webp&s=bbe92aa8f3ef5eab8823d611a4c791ef5021d9e8" />
-          <h2>Your Friendly Neighborhood Corporate Twitter</h2>
+          <img class= "projectImage" src="https://images.unsplash.com/photo-1609057339730-79faac0a5e3c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80" />
+          <h2><a href="https://soundcloud.com/james-obrien-461930712/your-friendly-neighborhood-corporate-twitter/s-f2sCvuEoX09?si=3d628e5298f64ef1b560b69b3452c7e4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"> Your Friendly Neighborhood Corporate Twitter</a></h2>
           <img src="./images/icons/computing.svg" class="icon" />
-          <p class="mins">Podcast: Under Construction</p>
+          <p class="mins">Podcast</p>
           <p class="description">
             Listen to some of my fellow students and I talk about the sensation of corporate social media!
           </p>
