podcast description update

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <img src="./images/icons/computing.svg" class="icon" />
           <p class="mins">Podcast</p>
           <p class="description">
-            Listen to some of my fellow students and I talk about the sensation of corporate social media!
+            Join us as we take a brief dive into the world of corporate Twitter accounts and small, local social media teams. We hit on pressing issues like: how can we be more aware of when we're being sold to? How do we draw the line between large corporations and their imitators? And are Pop Tarts virgin shaming?
           </p>
         </div>
         <div class="project" id="video">
