--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <main id="projects">
         <div class="project" id="blogPost">
           <img class= "projectImage" src="https://miro.medium.com/max/1400/1*HFkCD5JCdfBZ1wfpJe3pJQ.jpeg" />
-          <h2><a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559">The Top 3 FREE Digital Art Programs in 2022</a></h2>
+          <h2><a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559" alt="Image of an artwork created in Krita" >The Top 3 FREE Digital Art Programs in 2022</a></h2>
           <img src="./images/icons/article.svg" class="icon" />
           <p class="mins">Blog Post</p>
           <p class="description">
@@ -43,7 +43,7 @@
           </p>
         </div>
         <div class="project" id="frithInventory">
-          <img class= "projectImage" src="https://enge.vt.edu/content/enge_vt_edu/en/undergraduate/frith/jcr:content/content/vtcontainer_copy_cop_1381182388/vtcontainer-content/adaptiveimage.transform/xl-medium/image.jpg" />
+          <img class= "projectImage" src="https://enge.vt.edu/content/enge_vt_edu/en/undergraduate/frith/jcr:content/content/vtcontainer_copy_cop_1381182388/vtcontainer-content/adaptiveimage.transform/xl-medium/image.jpg" alt="Image of Virginia Tech's Frith Lab" />
           <h2>Workshop Inventory System</h2>
           <img src="images/icons/computing.svg" class="icon" />
           <p class="mins">Coding Project</p>
@@ -53,7 +53,7 @@
           </p>
         </div>
         <div class="project" id="covidVisualizer">
-          <img class= "projectImage" src="images/project-images/covid-19-visualizer-screenshot.png" />
+          <img class= "projectImage" src="images/project-images/covid-19-visualizer-screenshot.png" alt="Image of the project's bar graph visualization" />
           <h2>COVID-19 Data Visualization</h2>
           <img src="images/icons/computing.svg" class="icon" />
           <p class="mins">Coding Project</p>
@@ -63,7 +63,7 @@
           </p>
         </div>
         <div class="project" id="podcast">
-          <img class= "projectImage" src="https://images.unsplash.com/photo-1609057339730-79faac0a5e3c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80" />
+          <img class= "projectImage" src="https://images.unsplash.com/photo-1609057339730-79faac0a5e3c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80" alt="Image of Twitter app on mobile phone" />
           <h2><a href="https://soundcloud.com/james-obrien-461930712/your-friendly-neighborhood-corporate-twitter/s-f2sCvuEoX09?si=3d628e5298f64ef1b560b69b3452c7e4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"> Your Friendly Neighborhood Corporate Twitter</a></h2>
           <img src="./images/icons/computing.svg" class="icon" />
           <p class="mins">Podcast</p>
@@ -72,12 +72,12 @@
           </p>
         </div>
         <div class="project" id="video">
-          <img class= "projectImage" src="https://docs.krita.org/en/_static/sidebar-logo.png" />
-          <h2>Using Krita's Reference Tool</h2>
+          <img class= "projectImage" src="https://docs.krita.org/en/_static/sidebar-logo.png" alt="Image of Krita logo" />
+          <h2>How to Animate a Blink in Krita in 1 Minute</h2>
           <img src="./images/icons/computing.svg" class="icon" />
           <p class="mins">Video: Under Construction</p>
           <p class="description">
-            This short tutorial introduces you to Krita's <a href="https://docs.krita.org/en/reference_manual/tools/reference_images_tool.html">Reference Images Tool</a>, which allows the user to 'pin' images around their artwork for reference.
+            This short tutorial introduces you to Krita's animation workspace, and how to create a short animation in it.
           </p>
         </div>
       </main>
