--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </main>
 
       <footer>
-        Allison Deaton | B.S. Computer Science 2024 | Virginia Tech
+        © Allison Deaton 2022
       </footer>
 
     </div>
