--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Allison Deaton</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <!-- <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
@@ -36,7 +34,7 @@
           <img class= "projectImage" src="https://miro.medium.com/max/1400/1*HFkCD5JCdfBZ1wfpJe3pJQ.jpeg" />
           <h2><a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559" alt="Image of an artwork created in Krita" >The Top 3 FREE Digital Art Programs in 2022</a></h2>
           <img src="./images/icons/article.svg" class="icon" />
-          <p class="mins">Blog Post</p>
+          <p class="projectType">Blog Post</p>
           <p class="description">
             I <a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559">review</a> some of the most commonly used free 2D digital art programs by drawing something in each one.
             
@@ -46,7 +44,7 @@
           <img class= "projectImage" src="https://enge.vt.edu/content/enge_vt_edu/en/undergraduate/frith/jcr:content/content/vtcontainer_copy_cop_1381182388/vtcontainer-content/adaptiveimage.transform/xl-medium/image.jpg" alt="Image of Virginia Tech's Frith Lab" />
           <h2>Workshop Inventory System</h2>
           <img src="images/icons/computing.svg" class="icon" />
-          <p class="mins">Coding Project</p>
+          <p class="projectType">Coding Project</p>
           <p class="description">
             Collaborated with a team of other students to develop an inventory management 
             system from scratch for Virginia Tech's first year engineering lab.
@@ -56,7 +54,7 @@
           <img class= "projectImage" src="images/project-images/covid-19-visualizer-screenshot.png" alt="Image of the project's bar graph visualization" />
           <h2>COVID-19 Data Visualization</h2>
           <img src="images/icons/computing.svg" class="icon" />
-          <p class="mins">Coding Project</p>
+          <p class="projectType">Coding Project</p>
           <p class="description">
             Collaborated with a team of other students to develop a system to visualize data 
             (casualties and deaths) from COVID-19 in some states from the Southeast.
@@ -65,19 +63,19 @@
         <div class="project" id="podcast">
           <img class= "projectImage" src="https://images.unsplash.com/photo-1609057339730-79faac0a5e3c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80" alt="Image of Twitter app on mobile phone" />
           <h2><a href="https://soundcloud.com/james-obrien-461930712/your-friendly-neighborhood-corporate-twitter/s-f2sCvuEoX09?si=3d628e5298f64ef1b560b69b3452c7e4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"> Your Friendly Neighborhood Corporate Twitter</a></h2>
-          <img src="./images/icons/computing.svg" class="icon" />
-          <p class="mins">Podcast</p>
+          <img src="./images/icons/podcast.svg" class="icon" />
+          <p class="projectType">Podcast</p>
           <p class="description">
             Join us as we take a brief dive into the world of corporate Twitter accounts and small, local social media teams. We hit on pressing issues like: how can we be more aware of when we're being sold to? How do we draw the line between large corporations and their imitators? And are Pop Tarts virgin shaming?
           </p>
         </div>
         <div class="project" id="video">
-          <img class= "projectImage" src="https://docs.krita.org/en/_static/sidebar-logo.png" alt="Image of Krita logo" />
-          <h2>How to Animate a Blink in Krita in 1 Minute</h2>
-          <img src="./images/icons/computing.svg" class="icon" />
-          <p class="mins">Video: Under Construction</p>
+          <img class= "projectImage" src="./images/project-images/video-thumbnail.jpg" alt="Screenshot from video tutorial on animating a blink." />
+          <h2><a href="https://youtu.be/iclRvMs_vjU">How to Animate a Blink in Krita in 1 Minute</a></h2>
+          <img src="./images/icons/video.svg" class="icon" />
+          <p class="projectType">Video</p>
           <p class="description">
-            This short tutorial introduces you to Krita's animation workspace, and how to create a short animation in it.
+            This short tutorial introduces you to Krita's animation workspace, and how to create a short, lazy animation in it.
           </p>
         </div>
       </main>
