added frith link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p class="projectType">Coding Project</p>
           <p class="description">
             Collaborated with a team of other students to develop an inventory management 
-            system from scratch for Virginia Tech's first year engineering lab.
+            system from scratch for Virginia Tech's <a href="https://enge.vt.edu/undergraduate/frith.html">first year engineering lab</a>.
           </p>
         </div>
         <div class="project" id="covidVisualizer">
