--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <img src="./images/icons/article.svg" class="icon" />
           <p class="projectType">Blog Post</p>
           <p class="description">
-            I <a href="https://medium.com/@deatona404/the-top-3-free-digital-art-programs-in-2022-cb4dea525559">review</a> some of the most commonly used free 2D digital art programs by drawing something in each one.
+            I review some of the most commonly used free 2D digital art programs by drawing something in each one.
             
           </p>
         </div>
@@ -61,7 +61,8 @@
           </p>
         </div>
         <div class="project" id="podcast">
-          <img class= "projectImage" src="https://images.unsplash.com/photo-1609057339730-79faac0a5e3c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80" alt="Image of Twitter app on mobile phone" />
+          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1378460551%3Fsecret_token%3Ds-f2sCvuEoX09&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #CCCCCC;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/james-obrien-461930712" title="James O&#x27;Brien" target="_blank" style="color: #CCCCCC; text-decoration: none;"></a><a href="https://soundcloud.com/james-obrien-461930712/your-friendly-neighborhood-corporate-twitter" title="Your Friendly Neighborhood Corporate Twitter" target="_blank" style="color: #CCCCCC; text-decoration: none;"></a></div>
+          <!-- <img class= "projectImage" src="https://images.unsplash.com/photo-1609057339730-79faac0a5e3c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80" alt="Image of Twitter app on mobile phone" /> -->
           <h2><a href="https://soundcloud.com/james-obrien-461930712/your-friendly-neighborhood-corporate-twitter/s-f2sCvuEoX09?si=3d628e5298f64ef1b560b69b3452c7e4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"> Your Friendly Neighborhood Corporate Twitter</a></h2>
           <img src="./images/icons/podcast.svg" class="icon" />
           <p class="projectType">Podcast</p>
