updated images and pfp

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       <header>
         <div class="wrapper">
+          <img class="profilepic" src="../images/pixel-art-portrait-1-enlarge-crop.gif">
           <h1>Allison Deaton</h1>
             <p class="bio"> I'm a Computer Science student and an artist. 
               In my free time I like to expatiate about my undying love for Krita.
@@ -27,6 +28,10 @@
             <a class="myButton" href="#projects">Projects</a>
           </div>
         </div>
+        
+        <!-- <img class="u-fadeCycle-1" src="../images/3-29-2023-enlarged.gif">
+        <img class="u-fadeCycle-2" src="../images/4-13-2023-enlarged.gif">
+        <img class="u-fadeCycle-3" src="../images/5-12-enlarged.gif"> -->
       </header>
 
       <main id="projects">
@@ -83,7 +88,7 @@
       </main>
 
       <footer>
-        © Allison Deaton 2022
+        © Allison Deaton 2023
       </footer>
 
     </div>
